...
                CompatPostSnapshot(
                    position = 0,
                    postNo = "1463510009",
                    timestamp = "26/08/30(日)12:09:25",
                    messageHtml =
                        "<a href=\"$sourceUrl\">fu7190971.png</a>" +
                            "<span onclick=\"previewImg('body','$sourceUrl')\">[見る]</span><br>りんみ"
                ),
                CompatPostSnapshot(
                    position = 1,
                    postNo = "1463510029",
                    timestamp = "26/08/30(日)12:09:30",
                    messageHtml =
                        "&gt;<a href=\"$sourceUrl\">fu7190971.png</a>" +
                            "<span onclick=\"previewImg('quote','$sourceUrl')\">[見る]</span><br>失恋はほむらもだろ…"
                )
            )
        )
    )
}

...
